# quanting

./: .gitignore  BB-RSI_Checker_PRD.md  Quanting.pen  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
docs/: ACCESSIBILITY_AUTOMATION.md  ACCESSIBILITY_REPORT.md  ACCESSIBILITY_SCENARIO_AUDIT.md  COMMAND_HUB_WORKSPACES.md  ENTERPRISE_UI_UX_EXECUTION_TRACKER.md  ENTERPRISE_UI_UX_ROADMAP.md  INDICATOR_RESEARCH.md  NEXT_QUARTER_UX_ROADMAP_DRAFT.md  PERFORMANCE_UX_WEEK10_REPORT.md  PERFORMANCE_UX_WEEK9_REPORT.md  SHORTCUTS_MATRIX.md  UX_AUDIT_BASELINE.md  UX_CLICKFLOW_MEASUREMENT.md  UX_EXPERIMENT_PLAN.md  UX_KPI_REMEASURE_WEEK12.json  UX_KPI_REMEASURE_WEEK12.md  UX_PRIORITY_BACKLOG.md  UX_QA_GATE_WEEK12_REPORT.md  quant_strategy.md  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api_client/: binance.rs  kis.rs  mod.rs  yahoo.rs
src-tauri/src/cache/: mod.rs  sqlite.rs
src-tauri/src/commands/: analysis.rs  mod.rs  search.rs  strategy.rs
src-tauri/src/models/: candle.rs  fundamental.rs  indicator.rs  mod.rs  params.rs  search.rs  signal.rs  strategy.rs  watchlist.rs
src-tauri/src/ta_engine/: adx.rs  anchored_vwap.rs  atr.rs  auto_fib.rs  bollinger.rs  choppiness.rs  cmf.rs  cvd.rs  donchian.rs  ema.rs  helpers.rs  hma.rs  ichimoku.rs  keltner.rs  macd.rs  mfi.rs  mod.rs  obv.rs  parabolic_sar.rs  rsi.rs  signal.rs  sma.rs  smc.rs  stc.rs  stochastic.rs  supertrend.rs  vwap.rs  williams_r.rs  wma.rs
(+127 files in other folders)
